tests/cases/traits/errors/structural-capability-alias-as-type.ari
type Serializable = has serialize() -> i64;

fn save(value: Serializable) -> i64 {
  return 0;
}

fn main() -> i64 {
  return save(0);
}
